logs/rcli.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/shutil_get_terminal_size'...
Listing './lib/python3.5/site-packages/backports.shutil_get_terminal_size-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/pathlib2-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rcli'...
Listing './lib/python3.5/site-packages/rcli/backports'...
Listing './lib/python3.5/site-packages/rcli-0.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shutil_backports'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/py36'...
Compiling './lib/python3.5/site-packages/tests/py36/test_typed_objects.py'...
***   File "./lib/python3.5/site-packages/tests/py36/test_typed_objects.py", line 15
    x: str
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tqdm'...
Listing './lib/python3.5/site-packages/tqdm-4.19.5.dist-info'...
Listing './lib/python3.5/site-packages/typet'...
Listing './lib/python3.5/site-packages/typet-0.3.5.dist-info'...
Listing './lib/python3.5/site-packages/typing-3.6.2.dist-info'...
Listing './lib/python3.5/site-packages/typing_extensions-3.6.2.1.dist-info'...
Listing './lib/python3.5/site-packages/typingplus-2.2.1.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
